--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-
 .image-front {
     width: 60%;
 }
@@ -21,7 +20,7 @@
     top: 0;
     margin: auto;
     z-index: 0;
-    width: 95.4%;
+    width: 100%;
     height: 60%;
 }
 
@@ -31,6 +30,7 @@
 }
 
 .btn-primary {
+    border: none;
     background: #5C6AC4;
 }
 
@@ -39,30 +39,32 @@
 }
 
 
-
-
-
-
-
-.w-sutom-1 {
-    width: 400px;
+.w-custom-1 {
+    width: 450px;
 }
 
 .w-custom-2 {
-    width: 65%;
+    width: 59%;
 }
 
 .w-custom-3 {
-    width: 30%;
+    width: 39%;
 }
 
 
 
-
+.to-place::before {
+    border-top: 2px solid #000;
+}
 
 .to-place::after {
-    border-top: 5px solid #000;
-    width: 75%;
+    border-bottom: 1px solid #000;
+    width: 60%;
+    height: 2px;
     margin: auto;
-    
+
+}
+
+.clients {
+    transform: scale(0.8)
 }
